--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -61,7 +61,6 @@ jobs:
           version: 'v1.34.0'
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/deploy.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl apply -f k8s/ingress.yaml
-          kubectl apply -f k8s/clusterissuer.yaml
+           kubectl set image k8s/deploy/wisecow-app wisecow-app=harekl14/wisecow-app:$GITHUB_SHA
+           kubectl rollout restart k8s/deploy/wisecow-app
+
