--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -66,7 +66,5 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl set image deployment/wisecow \
-          wisecow=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-          --record
-          kubectl rollout status deployment/wisecow
+          kubectl set image deploy/wisecow wisecow=${{ env.IMAGE_NAME }}:latest --record
+          kubectl rollout status deploy/wisecow
