--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -61,9 +61,9 @@ jobs:
           version: 'v1.34.0'
       - name: Configure Kubeconfig
         run: |
-          mkdir -p $(HOME)/.kube
+          mkdir -p $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG }}" base64 -decode > $HOME/.kube/config
-          cat $(HOME)/.kube/config
+          cat $HOME/.kube/config
 
       - name: Deploy to Kubernetes
         run: |
