--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -59,11 +59,11 @@ jobs:
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.34.0'
-      - name: Configure Kubeconfig
+      - name: Configure Kubeconfig #testing
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG }}" base64 -decode > $HOME/.kube/config
-          cat $HOME/.kube/config
+          cat $HOME/.kube/config   
 
       - name: Deploy to Kubernetes
         run: |
