--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -88,6 +88,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup kind cluster
+        uses: helm/kind-action@v1.8.0
+        with:
+          cluster_name: kind
+          version: v0.30.0  
+
       # Log in to GHCR
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
