--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,9 +4,9 @@ metadata:
   name: wisecow-ingress
   namespace: wisecow
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
       - wisecow.127.0.0.1.nip.io   
@@ -22,3 +22,4 @@ spec:
             name: wisecow
             port:
               number: 80
+
