--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -122,22 +122,34 @@ jobs:
         run: |
           kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/kind/deploy.yaml
 
-      # Wait for ingress-nginx to be ready (fix for webhook issue)
+            
       - name: Wait for ingress-nginx
         run: |
+          
           kubectl wait --namespace ingress-nginx \
             --for=condition=Available deployment/ingress-nginx-controller \
-            --timeout=180s
+            --timeout=300s
+
+          # Wait for admission jobs
           kubectl wait --namespace ingress-nginx \
             --for=condition=complete job/ingress-nginx-admission-create \
-            --timeout=180s
+            --timeout=300s
           kubectl wait --namespace ingress-nginx \
             --for=condition=complete job/ingress-nginx-admission-patch \
-            --timeout=180s
+            --timeout=300s
+
+          # Ensure webhook TLS secret exists
+          for i in {1..30}; do
+            kubectl get secret ingress-nginx-admission -n ingress-nginx && break
+            echo "waiting for ingress-nginx admission secret..."
+            sleep 10
+          done
+
 
       # Load image into kind
       - name: Load image into kind
         run: |
+          
           kind load docker-image ghcr.io/${{ github.repository_owner }}/wisecow:v1 --name kind
 
       # Create namespace
