--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -111,39 +111,14 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/wisecow:v1
 
-      # Install cert-manager
-      - name: Setup cert-manager
+      - name: Install ingress-nginx without admission webhook
         run: |
-          kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.14.4/cert-manager.yaml
-          kubectl wait --for=condition=Available --timeout=300s deployment -n cert-manager --all
+          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+          helm repo update
+          helm install ingress-nginx ingress-nginx/ingress-nginx \
+            --namespace ingress-nginx --create-namespace \
+            --set controller.admissionWebhooks.enabled=false
 
-      # Install ingress-nginx
-      - name: Install ingress-nginx
-        run: |
-          kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/kind/deploy.yaml
-
-            
-      - name: Wait for ingress-nginx
-        run: |
-          
-          kubectl wait --namespace ingress-nginx \
-            --for=condition=Available deployment/ingress-nginx-controller \
-            --timeout=300s
-
-          # Wait for admission jobs
-          kubectl wait --namespace ingress-nginx \
-            --for=condition=complete job/ingress-nginx-admission-create \
-            --timeout=300s
-          kubectl wait --namespace ingress-nginx \
-            --for=condition=complete job/ingress-nginx-admission-patch \
-            --timeout=300s
-
-          # Ensure webhook TLS secret exists
-          for i in {1..30}; do
-            kubectl get secret ingress-nginx-admission -n ingress-nginx && break
-            echo "waiting for ingress-nginx admission secret..."
-            sleep 10
-          done
 
 
       # Load image into kind
