--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -75,7 +75,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest   
 
     permissions:
@@ -112,6 +112,10 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/wisecow:v1
 
+  Configure-and-deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
       # Install cert-manager
       - name: Setup cert-manager
         run: |
@@ -127,11 +131,9 @@ jobs:
             --namespace ingress-nginx --create-namespace \
             --set controller.admissionWebhooks.enabled=false
 
-
       # Load image into kind
       - name: Load image into kind
         run: |
-          
           kind load docker-image ghcr.io/${{ github.repository_owner }}/wisecow:v1 --name kind
 
       # Create namespace
