--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,81 +1,11 @@
-# name: cicd-wisecow
-# on:
-#   push:
-#     branches:
-#       - main        # Trigger only when pushing to main
-
-# env:
-#   IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/wisecow
-
-# permissions:
-#   contents: read
-#   packages: write   # permissions required to push to GHCR
-#   id-token: write
-
-# jobs:
-#   build-and-push:
-#     runs-on: ubuntu-latest
-#     outputs:
-#       image-tag: ${{ steps.set_tag.outputs.tag }}
-#     steps:
-#       - name: Checkout source
-#         uses: actions/checkout@v4
-
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
-
-#       - name: Log in to GitHub Container Registry
-#         uses: docker/login-action@v3
-#         with:
-#           registry: ghcr.io
-#           username: ${{ github.actor }}
-#           password: ${{ secrets.GH_TOKEN }}
-
-#       - name: Set image tag
-#         id: set_tag
-#         run: echo "tag=sha-${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
-
-#       - name: Build and push Docker image
-#         uses: docker/build-push-action@v5
-#         with:
-#           context: .
-#           file: ./Dockerfile
-#           push: true
-#           tags: |
-#             ${{ env.IMAGE_NAME }}:${{ steps.set_tag.outputs.tag }}
-#             ${{ env.IMAGE_NAME }}:latest
-#           cache-from: type=gha
-#           cache-to: type=gha,mode=max
-
-#   deploy:
-#     needs: build-and-push
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout repo
-#         uses: actions/checkout@v4
-
-#       - name: Set up kubectl
-#         uses: azure/setup-kubectl@v3
-#         with:
-#           version: 'v1.34.0'
-#       - name: Configure Kubeconfig #testing
-#         run: |
-#           kubectl apply -f k8s/kubeconfig.yaml 
-
-#       - name: Deploy to Kubernetes
-#         run: |
-#           kubectl set image deploy/wisecow wisecow=${{ env.IMAGE_NAME }}:latest --record
-#           kubectl rollout status deploy/wisecow
-
-
-name: CI/CD Pipeline for Kind
+name: ci-cd-wisecow
 
 on:
   push:
     branches: ["main"]
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest   
 
     permissions:
@@ -112,10 +42,6 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/wisecow:v1
 
-  Configure-and-deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
       # Install cert-manager
       - name: Setup cert-manager
         run: |
@@ -131,9 +57,11 @@ jobs:
             --namespace ingress-nginx --create-namespace \
             --set controller.admissionWebhooks.enabled=false
 
+
       # Load image into kind
       - name: Load image into kind
         run: |
+          
           kind load docker-image ghcr.io/${{ github.repository_owner }}/wisecow:v1 --name kind
 
       # Create namespace
